@startuml

title __WEEK7-WEEK7_07.DICTIONARY's Class Diagram__\n

  package  {
    enum Cmd {
    }
  }
  

  package  {
    class Dictionary {
    }
  }
  

  package  {
    class Dictionary {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class TextUserInterface {
    }
  }
  

  package  {
    class TextUserInterface {
    }
  }
  

  TextUserInterface o-- Dictionary : dict
  TextUserInterface o-- Dictionary : dict


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
